@@ -1236,6 +1236,14 @@ GED_EXPORT BU_EXTERN(int ged_arot, (struct ged *gedp, int argc, const char *argv
 GED_EXPORT BU_EXTERN(int ged_autoview, (struct ged *gedp, int argc, const char *argv[]));
 
 /**
+ * Report the size of the bounding box (rpp) around the specified object
+ *
+ * Usage:
+ *     bbsize object
+ */
+GED_EXPORT BU_EXTERN(int ged_bbsize, (struct ged *gedp, int argc, const char *argv[]));
+
+/**
  * Tesselates each operand object, then performs the
  * boolean evaluation, storing result in new_obj
  *
