@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-06-XX  Release 7.14.10                                    ---
 ----------------------------------------------------------------------
 
+* add bbsize command to report bounding box size - Cliff Yapp
 * reordering of and additions to Archer button menu - Cliff Yapp
 * extensive NURBS raytracing improvements - Keith Bowman, Cliff Yapp
 * initial undo support for Archer - Bob Parker
